--- a/css/cartesmenu.scss
+++ b/css/cartesmenu.scss
@@ -302,35 +302,38 @@ justify-content:space-between;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  padding: 0 1rem;
-
+  padding: 0 2rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .check {
-
+margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: $vert;
   width: 80px;
-  height: 100px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  height: 85px;
+  border-radius: 0 15px 15px 0 ;
   position: absolute;
   padding: 20px;
   right: -51px;
   top: 0;
   opacity: 0;
   transition: transform 330ms ease-in-out;
+  
 
   & .fa-check-circle {
     color: #fff;
     font-size: 1.7em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: transform 500ms ease-in-out;
   }
 }
-
-
 
 /*Bouton commander*/
 div.commander {
