--- a/css/cartesmenu.css
+++ b/css/cartesmenu.css
@@ -267,7 +267,7 @@ div.description {
   text-overflow: ellipsis;
   overflow: hidden;
   flex: 1;
-  margin: 0 15px 10px 15px;
+  margin: 10px 15px 10px 15px;
   width: 100%;
 }
 
@@ -304,7 +304,7 @@ div.description_desc {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  padding: 0 2rem;
+  padding: 0 2rem 0 0;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -317,7 +317,7 @@ div.description_desc {
   align-items: center;
   background-color: #99e2d0;
   width: 80px;
-  height: 85px;
+  height: 95px;
   border-radius: 0 15px 15px 0;
   position: absolute;
   padding: 20px;
