--- a/css/cartesmenu.scss
+++ b/css/cartesmenu.scss
@@ -230,8 +230,9 @@ div.restaurant img {
 }
 
 /*cartes menu entrees*/
+
 .cartes {
-  background-color: #fff;
+  background-color:white;
   border-radius: 15px;
   margin: 10px 0 30px 0;
   padding: 10px;
