--- a/css/cartesmenu.scss
+++ b/css/cartesmenu.scss
@@ -261,7 +261,7 @@ div.restaurant img {
 }
 
 div.description {
-  margin: 0 15px 0 12px;
+  margin: 10px 15px 0 12px;
   width: 100%;
 
 }
@@ -276,13 +276,12 @@ div.description_desc {
 
 
 .description h3 {
-  margin: 0;
+  margin: 0 1em 0 0;
   font-size: 1.3em;
   font-weight: 700;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  width: 100%;
 
 }
 
@@ -291,29 +290,28 @@ p {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  width: 100%;
-
-  margin: 10px 0 0 0;
+  margin: 7px 0 7px 0;
 }
 
-.prix {
+span.prix {
   font-weight: bold;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   padding: 0 1rem;
-
+  margin: 0 15px 5px 0;
+  
 }
 
+
 .check {
-  border: solid;
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: $vert;
-  width: 80px;
-  height: 85px;
+  width: 90px;
+  height: 103px;
   border-radius: 0 15px 15px 0;
   position: absolute;
   padding: 20px;
@@ -321,9 +319,7 @@ p {
   top: 0;
   opacity: 0;
   transition: transform 330ms ease-in-out;
-&:hover{
-  margin: 0 0 0 1em;
-}
+
 
   & .fa-check-circle {
     color: #fff;
@@ -402,16 +398,26 @@ a {
 
 /*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*Version Tablette*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*/
 @media all and (max-width: 998px) {
+/*image de la page d'accueil*/
   div.restaurant img {
     margin: -250px 0 -80px 0;
     width: 100%;
     object-fit: cover;
   }
+  /*titre avec coeur*/
 
+  .titre h1 {
+    margin: 30px 0 30px 60px;
+    font-size: 1.7em;
+}
+.coeur{
+  margin: 0 10px 0 0;
+}
+/*block cartes repas */
   .blockmenu {
-    display: flex;
+     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
   }
 
   .entrees,
@@ -422,9 +428,15 @@ a {
   }
 
   .cartes {
-    margin: 10px 5px 30px -10px;
+    width: 99%;
+    margin: 10px 0 30px 0;
   }
-
+  .description_desc {
+    margin: 0 0 10px 0;
+  }
+.footerdescription{
+  margin: 0 0 20px 55px;
+}
 }
 
 /*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*Version Portable*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*/
@@ -546,7 +558,6 @@ a {
   /*cartes marges*/
   div.cartes {
     background-color: white;
-    padding: 1em;
     display: flex;
     border-radius: 15px;
     margin: 1rem 0;
@@ -559,6 +570,7 @@ a {
 
   /*polices des cartes*/
   .description_de div.description {
+    border: solid;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -568,7 +580,7 @@ a {
   }
 
   .description h3 {
-    margin: 0;
+    margin: 0 1em 0 0;
     width: auto;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -587,12 +599,13 @@ a {
   }
 
 
-  .prix {
+  span.prix {
     font-weight: bold;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    padding-left: 1rem;
+    margin: 10px 15px 0 0;
+    padding:0 1rem ;
 
   }
 
@@ -607,11 +620,15 @@ a {
       transition-duration: 0.5s;
     }
   }
-
-
+  /*hauteur du chek pour adapter a la taille de la carte*/
+.check{
+  border: solid;
+  height: 100px;
+    width: 90px;
+    margin: 0  0 0 10px;
+}
   div.check i {
-    height: 1.6rem;
-    width: 1.9rem;
+  
     color: white;
     display: flex;
     align-items: center;
