--- a/css/cartesmenu.css
+++ b/css/cartesmenu.css
@@ -473,6 +473,7 @@ a {
   .titre h1 {
     font-size: 1.7em;
     font-weight: 900;
+    margin: 30px 0 30px 30px;
     font-family: "Shrikhand", "sans-serif";
   }
   /*Coeur*/
@@ -535,14 +536,12 @@ a {
     width: 90%;
   }
   /*polices des cartes*/
-  .description_de div.description {
-    border: solid;
+  .description_desc div.description {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
     flex: 1;
     margin: 0;
-    border: solid;
   }
   .description h3 {
     margin: 0 1em 0 0;
@@ -579,8 +578,7 @@ a {
   }
   /*hauteur du chek pour adapter a la taille de la carte*/
   .check {
-    border: solid;
-    height: 100px;
+    height: 101px;
     width: 90px;
     margin: 0 0 0 10px;
   }
@@ -629,7 +627,7 @@ a {
     width: 100%;
   }
   .footerdescription {
-    margin: 0 0 30px 30px;
+    margin: 0 0 30px 35px;
     align-items: flex-start;
     display: flex;
   }
