--- a/css/cartesmenu.scss
+++ b/css/cartesmenu.scss
@@ -107,7 +107,7 @@ div.restaurant img {
 }
 
 .titre h1 {
-  margin: 30px 0 30px 30px;
+  margin: 30px 0 30px 45px;
   font-size: 1.7em;
   font-weight: 900;
   font-family: "Shrikhand", "sans-serif";
@@ -120,6 +120,7 @@ div.restaurant img {
   width: 10%;
   align-items: center;
   justify-content: space-between;
+  margin: 0 0 0 50px;
 }
 
 .coeur i {
@@ -127,8 +128,11 @@ div.restaurant img {
   position: absolute;
   transform: translateY(0%);
 }
-
+.far.fa-heart{
+  margin: 0 0 0 45px;
+}
 .fas.fa-heart {
+  
   @include coeur();
 }
 
