--- a/css/cartesmenu.scss
+++ b/css/cartesmenu.scss
@@ -420,6 +420,9 @@ a {
   .coeur {
     margin: 0 10px 0 0;
   }
+  .far.fa-heart{
+    margin: 0 0 0 0px;
+  }
 
   /*block cartes repas */
   .blockmenu {
