--- a/css/cartesmenu.css
+++ b/css/cartesmenu.css
@@ -419,6 +419,9 @@ a {
   .coeur {
     margin: 0 10px 0 0;
   }
+  .far.fa-heart {
+    margin: 0 0 0 0px;
+  }
   /*block cartes repas */
   .blockmenu {
     display: flex;
