--- a/css/main.scss
+++ b/css/main.scss
@@ -181,19 +181,20 @@ div.explorer input {
 }
 
 /* Fonctionnement bouton*/
-.fonctionnement {
+aside.fonctionnement {
   width: 98%;
+ margin: 0 0 0 25px;
   background-color: white;
 }
 
 .fonctionnement,
 h2 {
-  margin: 30px 0 15px 15px;
+  margin: 30px 0 15px 10px;
 }
 
 .ensemblebouton {
   display: flex;
-  margin: 0 0 0 -15px;
+  margin: 0 25px 0 -20px;
 }
 
 div.bouton {
