--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,7 @@ div.explorer input {
 /* Fonctionnement bouton*/
 aside.fonctionnement {
   width: 98%;
-  margin: 0 0 0 25px;
+  margin: 0 0 0 0;
   background-color: white;
 }
 
