--- a/css/main.scss
+++ b/css/main.scss
@@ -182,8 +182,9 @@ div.explorer input {
 
 /* Fonctionnement bouton*/
 aside.fonctionnement {
+  border: solid;
   width: 98%;
- margin: 0 0 0 25px;
+ margin: 0 0 0 0;
   background-color: white;
 }
 
