--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: 'Roboto', 'sans-serif';
+  border: dashed 1px ;
 }
 
 /* Animation*/
@@ -183,8 +184,8 @@ div.explorer input {
 /* Fonctionnement bouton*/
 aside.fonctionnement {
   width: 95%;
- margin: 0 0 0 0;
   background-color: white;
+
 }
 
 .fonctionnement,
