--- a/css/cartesmenu.scss
+++ b/css/cartesmenu.scss
@@ -122,7 +122,7 @@ div.titre {
   width: 4%;
   align-items: center;
   justify-content: center;
-  margin: 0 35px 0 0;
+  margin: 0 30px 0 0;
 }
 
 .coeur i {
@@ -501,24 +501,25 @@ a {
     margin-top: -30px;
     height: 100%;
     width: 100%;
-
   }
 
 
 
   /*titre accueil*/
   div.titre {
-    width: 100%;
+    width: 90%;
+    border: solid;
     display: flex;
     justify-content: space-around;
   }
 
   .titre h1 {
+    border: solid red 1px;
     font-size: 1.5em;
     font-weight: 900;
-    margin: 30px 0 30px 20px;
+    margin: 30px 0 30px 0px;
     font-family: "Shrikhand", "sans-serif";
-    width: 70%;
+    width: 100%;
     display: flex;
     justify-content: flex-start;
   }
@@ -526,9 +527,9 @@ a {
   /*Coeur*/
   .coeur {
     display: flex;
-    justify-content: flex-start;
-    margin: 0 25px 0 0;
-    width: 15%;
+    justify-content: center;
+    margin: 0 40px 0 0;
+    width: 13%;
   }
 
   .coeur i {
@@ -550,9 +551,6 @@ a {
     margin: 0 10px 0 10px;
   }
 
-  .blockmenu h2 {
-    margin: 0 0 0 25px;
-  }
 
   .entrees,
   .plats,
@@ -566,7 +564,7 @@ a {
   .entrees h2,
   .plats h2,
   .desserts h2 {
-    margin: 0 0 0 25px;
+    margin: 0 0 0 35px;
   }
 
   /*Espace sur plat et dessert*/
