--- a/css/main.scss
+++ b/css/main.scss
@@ -184,12 +184,16 @@ div.explorer input {
 aside.fonctionnement {
   width: 95%;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  margin: 0 30px 0 30px;
 
 }
 
 .fonctionnement,
 h2 {
-  margin: 30px 0 15px 10px;
+  margin: 30px 0 15px 20px;
 }
 
 .ensemblebouton {
@@ -358,7 +362,7 @@ div.card.cartes4 img {
 .footerdescription {
   display: flex;
   flex-direction: column;
-    margin: 0 0 20px 2em;
+    margin: 0 0 20px 2.5em;
 }
 
 /*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-* MEDIA QUERY *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*/
@@ -438,9 +442,12 @@ div.card.cartes4 img {
 
 
   /*boutons fonctionnement*/
+  aside.fonctionnement{
+    margin-top:20px;
+  }
   /*titre Fonctionnement*/
-  .fonctionnement h2 {
-    margin: 40px 0 30px 20px;
+  .fonctionnement, h2 {
+    margin: 0px 0 30px 15px;
   }
 
   .ensemblebouton {
@@ -484,7 +491,7 @@ div.card.cartes4 img {
   }
 
   .footerdescription {
-    margin: 0 0 0 30px;
+    margin: 0 0 0 35px;
   }
 }
 
@@ -537,13 +544,12 @@ div.card.cartes4 img {
   }
 
   /*Fonctionnement*/
-  .fonctionnement {
+  aside.fonctionnement {
     width: 95%;
-    justify-content: flex-start;
-    margin: 10px 0 3em 15px;
+    margin: 10px 0 0em 17px;
   }
 
-  .fonctionnement h2 {
+  aside.fonctionnement h2 {
     margin: 2em 0 20px 10px;
   }
 
