--- a/css/cartesmenu.scss
+++ b/css/cartesmenu.scss
@@ -18,6 +18,7 @@
   background-color: white;
   display: flex;
   width: 100%;
+  height: 5em;
   align-items: center;
   justify-content: flex-start;
 }
@@ -37,7 +38,7 @@
 }
 
 .fas.fa-arrow-left {
-  margin: 20px 0 0 10px;
+  margin: 20px 0 0 20px;
   font-size: 2em;
   display: flex;
   justify-content: flex-start;
@@ -52,6 +53,7 @@
 .conteneur a.titre {
   width: 100%;
   position: absolute;
+  
 
 }
 
@@ -59,6 +61,7 @@ h5 {
   font-family: 'Shrikhand', 'sans-serif';
   font-size: 2.8em;
   display: flex;
+  margin: 20px 0 0 0;
   justify-content: center;
   align-items: center;
   align-content: center;
@@ -101,18 +104,19 @@ div.restaurant img {
 
 /*Titres*/
 div.titre {
-  width: 98%;
+  width: 96%;
   display: flex;
   justify-content: space-between;
-
 }
 
 .titre h1 {
-  padding: 1em;
+  padding:1em 15px;
   font-size: 1.7em;
   font-weight: 900;
   font-family: "Shrikhand", "sans-serif";
   width: 96%;
+  display: flex;
+  align-self: start;
 }
 
 /*Coeur*/
@@ -197,7 +201,7 @@ div.titre {
 }
 
 
-/*Animation Keyframes*/
+/*Animation cartes Keyframes*/
 @keyframes fondu {
   0% {
     transform: translateZ(-800px) rotateX(90deg);
@@ -395,7 +399,7 @@ a {
 .footerdescription {
   display: flex;
   flex-direction: column;
-  margin: 0 0 0 3em;
+  margin: 0 0 0 40px;
 }
 
 .footerdescription a .fas.fa-ustensils {
@@ -420,7 +424,7 @@ a {
   }
 
   .titre h1 {
-    margin: 30px 0 30px 50px;
+    margin: 30px 0 30px 1.9em;
     font-size: 1.7em;
     padding: 0;
     width: 85%;
@@ -470,20 +474,24 @@ a {
 
   /*NAVBAR*/
   .conteneur {
+ 
     margin: 0;
     background-color: white;
-    height: 70px;
+    height: 60px;
   }
 
   .conteneur a.titre {
     margin: 0;
     font-size: 0.8em;
   }
+  .titre h5{
+    margin: 0;
+  }
 
   /*fleche*/
   .fas.fa-arrow-left {
-    margin: 20px 0 0 10px;
-    font-size: 1.2em;
+    margin: 20px 0 0 20px;
+    font-size: 1.3em;
     justify-content: center;
   }
 
@@ -508,18 +516,16 @@ a {
   /*titre accueil*/
   div.titre {
     width: 90%;
-    border: solid;
     display: flex;
-    justify-content: space-around;
+    justify-content:flex-start;
   }
 
   .titre h1 {
-    border: solid red 1px;
-    font-size: 1.5em;
+    font-size: 1.6em;
     font-weight: 900;
-    margin: 30px 0 30px 0px;
+    margin: 30px 0 30px 5px;
     font-family: "Shrikhand", "sans-serif";
-    width: 100%;
+    width: 70%;
     display: flex;
     justify-content: flex-start;
   }
@@ -527,9 +533,9 @@ a {
   /*Coeur*/
   .coeur {
     display: flex;
-    justify-content: center;
-    margin: 0 40px 0 0;
-    width: 13%;
+    justify-content: flex-end;
+    margin: 0 20px 0 -10px;
+    width: 19%;
   }
 
   .coeur i {
@@ -559,12 +565,16 @@ a {
     height: -webkit-max-content;
     height: -moz-max-content;
     height: max-content;
+    margin: 0;
   }
 
   .entrees h2,
   .plats h2,
   .desserts h2 {
-    margin: 0 0 0 35px;
+   font-size:1.4em;
+   margin: 0 0 0 1.5em;
+
+   
   }
 
   /*Espace sur plat et dessert*/
@@ -704,7 +714,7 @@ a {
   }
 
   .footerdescription {
-    margin: 0 0 30px 35px;
+    margin: 0 0 30px 45px;
     align-items: flex-start;
     display: flex;
 
